<resources>
    <string name="app_name">Daily Quotes</string>
    <string name="quotes">If one advances confidently in the direction of his dream, and endeavours to live the life which he had imagines, he will meet with a success unexpected in common hours.</string>
    <string name="author">Henry David Thoreau</string>
    <string name="save">Save</string>
    <string name="favorite">Favorite</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
</resources>