<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    android:elevation="0dp"
    android:backgroundTint="@color/light_green"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/copy"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semibold"
            android:drawableTop="@drawable/ic_copy"
            android:gravity="center"
            android:textColor="@color/black"
            android:lineSpacingExtra="1dp"
            android:padding="3dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="5dp"
            android:text="@string/copy"
            app:drawableTint="@color/black"
            android:textSize="16sp"
            android:typeface="monospace" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/save"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semibold"
            android:drawableTop="@drawable/ic_save"
            android:gravity="center"
            app:drawableTint="@color/black"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/black"
            android:lineSpacingExtra="1dp"
            android:drawablePadding="5dp"
            android:padding="3dp"
            android:text="@string/save"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/share"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/open_sans_semibold"
            android:drawableTop="@drawable/ic_share"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            android:padding="3dp"
            android:text="@string/share"
            android:textSize="16sp"
            app:drawableTint="@color/black" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>