<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/teal_700"
    android:background="@color/teal_700"
    tools:context=".activity.QuotesDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color3"
            android:elevation="4dp"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardItem"
        android:layout_gravity="center"
        android:background="@color/black"
        android:backgroundTint="@color/color3"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:lineSpacingExtra="1dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/quotes"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:typeface="monospace" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="end"
                android:padding="2dp"
                android:textColor="@color/white"
                android:lineSpacingExtra="1dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/author"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <include
        android:layout_gravity="bottom"
        layout="@layout/custom_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>